tests/baselines/reference/promiseTypeInference.errors.txt
tests/cases/compiler/promiseTypeInference.ts(10,34): error TS2345: Argument of type '(s: 文字) => IPromise<数字>' is not assignable to parameter of type '(value: 文字) => 数字 | PromiseLike<数字>'.
  Type 'IPromise<数字>' is not assignable to type '数字 | PromiseLike<数字>'.
    Type 'IPromise<数字>' is not assignable to type 'PromiseLike<数字>'.
      Types of property 'then' are incompatible.
        Type '<U>(success?: (value: 数字) => IPromise<U>) => IPromise<U>' is not assignable to type '<TResult1 = 数字, TResult2 = 不及>(onfulfilled?: (value: 数字) => TResult1 | PromiseLike<TResult1>, onrejected?: (reason: 任意) => TResult2 | PromiseLike<TResult2>) => PromiseLike<TResult1 | TResult2>'.
          Types of parameters 'success' and 'onfulfilled' are incompatible.
            Type 'TResult1 | PromiseLike<TResult1>' is not assignable to type 'IPromise<TResult1 | TResult2>'.
              Type 'TResult1' is not assignable to type 'IPromise<TResult1 | TResult2>'.


==== tests/cases/compiler/promiseTypeInference.ts (1 errors) ====
    declare class Promise<T> {
        then<U>(success?: (value: T) => Promise<U>): Promise<U>;
    }
    interface IPromise<T> {
        then<U>(success?: (value: T) => IPromise<U>): IPromise<U>;
    }
    declare function load(name: string): Promise<string>;
    declare function convert(s: string): IPromise<number>;
    
    var $$x = load("something").then(s => convert(s));
                                     ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(s: 文字) => IPromise<数字>' is not assignable to parameter of type '(value: 文字) => 数字 | PromiseLike<数字>'.
!!! error TS2345:   Type 'IPromise<数字>' is not assignable to type '数字 | PromiseLike<数字>'.
!!! error TS2345:     Type 'IPromise<数字>' is not assignable to type 'PromiseLike<数字>'.
!!! error TS2345:       Types of property 'then' are incompatible.
!!! error TS2345:         Type '<U>(success?: (value: 数字) => IPromise<U>) => IPromise<U>' is not assignable to type '<TResult1 = 数字, TResult2 = 不及>(onfulfilled?: (value: 数字) => TResult1 | PromiseLike<TResult1>, onrejected?: (reason: 任意) => TResult2 | PromiseLike<TResult2>) => PromiseLike<TResult1 | TResult2>'.
!!! error TS2345:           Types of parameters 'success' and 'onfulfilled' are incompatible.
!!! error TS2345:             Type 'TResult1 | PromiseLike<TResult1>' is not assignable to type 'IPromise<TResult1 | TResult2>'.
!!! error TS2345:               Type 'TResult1' is not assignable to type 'IPromise<TResult1 | TResult2>'.
    